syntax = "proto3";

option go_package = "./";

message Book {
  string title = 1;
  string author = 2;
  int32 page_count = 3;
  string language = 4;
}

message GetBookRequest {}
message GetBookResponse { Book book = 1; }

service Inventory {
  rpc GetBookList(GetBookRequest) returns (GetBookResponse) {}
}